# ForthInterpreter

./: CODE_OF_CONDUCT.md  Cargo.toml
forth_interpreter/: Cargo.toml
py_binding/: Cargo.toml
py_binding/src/: lib.rs
src/: bin.rs  errors.rs  lib.rs  literal.rs  stack.rs
src/entities/: entities.rs  literal.rs  mod.rs
src/entities/complex/: array.rs  definition.rs  expression.rs  mod.rs  statement.rs  variable.rs
src/entities/simple/: ident.rs  literal.rs  mod.rs
src/parser/: forth.pest  literal.rs  mod.rs
src/tests/: arrays.rs  mod.rs
src/tests/easy_forth/: adding_some_numbers.rs  arrays.rs  conditionals_and_loops.rs  defining_words.rs  generating_output.rs  mod.rs  stack_manipulating.rs  variables_and_constants.rs
src/words/: mod.rs
