[package]
name = "forth_interpreter"
version = "0.2.3"
authors = ["PatriotRossii <patriotrossii2019@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
pest = "2"
pest_derive = "2.0"
cpython = "0.5"
console = "0.14"

[lib]
name = "forth_interpreter"
path = "src/lib.rs"

[[bin]]
name = "forth_interpreter_binary"
path = "src/bin.rs"

[workspace]
members = [
    "py_binding",
]